# kuramoto-db

./: Cargo.toml  LICENCE  nextest.toml
.cargo/: config.toml
examples/: web_admin.rs
src/: clock.rs  database.rs  lib.rs  memory_storage.rs  meta.rs  region_lock.rs  riblt.rs  storage_entity.rs  storage_error.rs  tables.rs  time.rs  uuid_bytes.rs
src/communication/: mod.rs  rate_limiter.rs  router.rs
src/communication/transports/: inmem.rs  mod.rs  quic.rs
src/middlewares/: mod.rs
src/middlewares/harmonizer/: availability.rs  child_set.rs  harmonizer.rs  mod.rs  protocol.rs  range_cube.rs  riblt.rs
src/plugins/: mod.rs
src/plugins/communication/: router.rs
src/plugins/communication/transports/: inmem.rs  mod.rs
src/plugins/communication/transports/webrtc/: mod.rs  native.rs  wasm.rs
src/plugins/communication/transports/websockets/: mod.rs  native.rs  wasm.rs
src/plugins/fetch/: mod.rs
src/plugins/harmonizer/: availability.rs  availability_queries.rs  child_set.rs  harmonizer.rs  integrity.rs  mod.rs  optimizer.rs  peer.rs  peer_probe.rs  protocol.rs  range_cube.rs  riblt.rs  sync_tester.rs
src/plugins/harmonizer/scorers/: mod.rs  server_scorer.rs
src/plugins/harmonizer/search/: beam.rs  mod.rs
src/plugins/replay/: mod.rs
src/plugins/self_identity/: mod.rs
src/plugins/versioning/: mod.rs
src/plugins/web_admin/: mod.rs
src/plugins/web_admin/static/: app.js  index.html  styles.css
src/tests/: harmonizer_test.rs  middleware_test.rs  mod.rs  storage_local_test.rs
