[package]
name = "kuramoto-db"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0"
redb = "2.6.2"
async-trait = "0.1.88"
async-recursion = "1.0"
tempfile = "3.20.0"
tokio = { version = "1.43", features = [
  "rt-multi-thread",
  "rt",
  "macros",
  "sync",
  "io-util",
  "test-util",       # TODO: only if testing
] }


rand = { version = "0.9.1" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
uuid = { version = "1.17", features = ["v4"] }
smallvec = { version = "1.15.1", features = ["impl_bincode"] }


dashmap = "6.1.0" # TODO: feat inmem
quinn = "0.11.8" # TODO: feat quic
rustls = { version = "0.23", default-features = false, features = [
  "ring",
] } # TODO: feat quic
rcgen = "0.13" # TODO: feat quic


[features]
riblt_debug = []
