[package]
name = "kuramoto-db"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0"
redb = "2.6.2"
async-trait = "0.1.88"
async-recursion = "1.0"
tempfile = "3.20.0"
# Tokio runtime configuration differs across targets. Keep the base feature
# set minimal so wasm builds compile, and enable heavier options for native
# targets below.


rand = { version = "0.9.1" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
uuid = { version = "1.17", features = ["v4", "rng-getrandom"] }
smallvec = { version = "1.15.1", features = ["impl_bincode"] }
bytes = { version = "1.7", optional = true }


quinn = { version = "0.11.8", optional = true } # gated by feature `harmonizer`
rustls = { version = "0.23", default-features = false, features = [
  "ring",
], optional = true } # gated by feature `harmonizer`
rcgen = { version = "0.13", optional = true } # gated by feature `harmonizer`
tracing = "0.1.41"
futures-util = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Web admin (optional) — compile only when feature enabled
# Enable `macros` for #[axum::debug_handler] diagnostics
axum = { version = "0.7", features = ["http1", "macros"], optional = true }
urlencoding = { version = "2.1", optional = true }
hex = { version = "0.4", optional = true }
tokio-tungstenite = { version = "0.21", optional = true, features = [
  "rustls-tls-webpki-roots",
] }
tokio = { version = "1.43", features = [
  "rt-multi-thread",
  "rt",
  "macros",
  "sync",
  "io-util",
  "test-util",
] }


[features]
riblt_debug = []
harmonizer_debug = []
harmonizer = ["quinn", "rustls", "rcgen"]
web_admin = ["axum", "urlencoding", "hex"]
# Explicit backend features; pick one per target.
webrtc_transport = []
webrtc_native = ["webrtc", "bytes"]
webrtc_wasm = ["wasm-bindgen", "web-sys"]
ws_transport = []
ws_native = ["tokio-tungstenite"]
ws_wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys"]

[dependencies.webrtc]
version = "0.10"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.43", features = [
  "rt",
  "macros",
  "sync",
  "io-util",
  "time",
] }
web-time = "0.2"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "RtcPeerConnection",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "EventTarget",
  "BinaryType",
  "MessageEvent",
  "WebSocket",
] }
